wrote sql queries for creating tables and modifed all models